@@ -18,6 +18,7 @@ Date: 9/6/25
     - Fixed that some coin sprites would have tooltips with non-integer values while viewing higher quality trades in hex cores.
     - Fixed that hextreme quality was not decreasing the power consumption of beacons like other qualities do.
     - Fixed range of entity removal when hex cores spawn.
+    - Fixed that the Quantum Bazaar wasn't allowing to trade interplanetary items.
   Changes:
     - Clicking on a GPS tag in chat no longer opens pinged hex cores.
     - Changed Sentient Spider inventory size to 120 (50% higher than spidertron).
